# ipa-translate

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  phonetics.rs
tests/: branner.rs  kirshenbaum.rs  praat.rs  readme_test.rs  sil.rs  xsampa.rs
translations/: branner.rs  kirshenbaum.in  praat.rs  sil.rs  xsampa.in  xsampa.rs  xsampa.txt
